Replace with actual pagination to avoid overflowing shit

--- a/resources/assets/less/bem/mp-history-content.less
+++ b/resources/assets/less/bem/mp-history-content.less
@@ -20,12 +20,16 @@
   &__show-more-box {
     display: flex;
     justify-content: center;
+    font-size: 12px;
+    line-height: 1;
+    padding: 10px;
 
     margin-bottom: 10px;
   }
 
   &__show-more {
-    font-size: 12px;
+    .reset-input();
+
     cursor: pointer;
 
     text-align: center;
